@@ -1,5 +1,8 @@
 2011-03-08  Don Porter  <dgp@users.sourceforge.net>
 
+	* generic/tclInt.h:	Remove TclMarkList() routine, an experimental
+	* generic/tclUtil.c:	dead-end from the 8.5 alpha days.
+
 	* generic/tclResult.c (ResetObjResult):	Correct failure to clear
 	invalid intrep.  Thanks to Colin McDonald. [Bug 3202905]
 
